--- a/NovelAISetup.ipynb
+++ b/NovelAISetup.ipynb
@@ -43,6 +43,7 @@
     {
       "cell_type": "code",
       "source": [
+        "pip install pytorch-lightning",
         "#@title ### 2. Setup NovelAI\n",
         "\n",
         "%cd /content/naifu\n",
