--- a/NovelAISetup.ipynb
+++ b/NovelAISetup.ipynb
@@ -25,15 +25,14 @@
         "#@title ### 1. Install Files\n",
         "\n",
         "%cd /content/\n",
-        "!apt install -y -qq aria2\n",
-        "!aria2c --summary-interval=5 -x 3 --allow-overwrite=true -Z \\\n",
-        "   https://pub-2fdef7a2969f43289c42ac5ae3412fd4.r2.dev/naifu.tar \\\n",
-        "   https://pub-2fdef7a2969f43289c42ac5ae3412fd4.r2.dev/animefull-latest.tar\n",
-        "  \n",
+        "!pip install gdown",
+        "!gdown --fuzzy https://drive.google.com/file/d?id=1--QOWFiET4fjqO8pTgSVtx1gw0ooCkSx",
+        "!gdown --fuzzy https://drive.google.com/file/d?id=1--4KrvivgEvpUUGBDSbozZXXpuGTYem6",
         "!echo \"Decompressing...\"\n",
         "!tar xf naifu.tar && rm naifu.tar\n",
         "!echo \"Done.\"\n",
         "\n",
+        "%cd /content/naifu\n",
         "%cd /content/naifu\n",
         "!pip install virtualenv && bash ./setup.sh\n",
         "!curl -Ls https://github.com/ekzhang/bore/releases/download/v0.4.0/bore-v0.4.0-x86_64-unknown-linux-musl.tar.gz | tar zx -C /usr/bin\n",
