--- a/NovelAISetup.ipynb
+++ b/NovelAISetup.ipynb
@@ -25,15 +25,24 @@
         "#@title ### 1. Install Files\n",
         "\n",
         "%cd /content/\n",
-        "!pip install gdown",
-        "!gdown --fuzzy https://drive.google.com/file/d?id=1--QOWFiET4fjqO8pTgSVtx1gw0ooCkSx",
-        "!gdown --fuzzy https://drive.google.com/file/d?id=1--4KrvivgEvpUUGBDSbozZXXpuGTYem6",
+        "!pip install gdown\n",
+        "!gdown --fuzzy https://drive.google.com/file/d?id=1--QOWFiET4fjqO8pTgSVtx1gw0ooCkSx\n",
+        "!gdown --fuzzy https://drive.google.com/file/d?id=1--4KrvivgEvpUUGBDSbozZXXpuGTYem6\n",
         "!echo \"Decompressing...\"\n",
         "!tar xf naifu.tar && rm naifu.tar\n",
         "!echo \"Done.\"\n",
         "\n",
         "%cd /content/naifu\n",
-        "%cd /content/naifu\n",
+        "import fileinput\n",
+        "import sys\n",
+
+        "def replaceAll(file,searchExp,replaceExp):\n",
+        "for line in fileinput.input(file, inplace=1):\n",
+        "if searchExp in line:\n",
+            "line = line.replace(searchExp,replaceExp)\n",
+        "sys.stdout.write(line)\n",
+        "replaceAll("requirements.txt","pytorch_lightning","pytorch_lightning==1.7.7")\n",
+        "replaceAll("requirements.txt","scikit-image","scikit-image>=0.19")\n",
         "!pip install virtualenv && bash ./setup.sh\n",
         "!curl -Ls https://github.com/ekzhang/bore/releases/download/v0.4.0/bore-v0.4.0-x86_64-unknown-linux-musl.tar.gz | tar zx -C /usr/bin\n",
         "!curl -Lo /usr/bin/cloudflared https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 && chmod +x /usr/bin/cloudflared"
