--- a/NovelAISetup.ipynb
+++ b/NovelAISetup.ipynb
@@ -41,8 +41,8 @@
         "if searchExp in line:\n",
             "line = line.replace(searchExp,replaceExp)\n",
         "sys.stdout.write(line)\n",
-        "replaceAll("requirements.txt","pytorch_lightning","pytorch_lightning==1.7.7")\n",
-        "replaceAll("requirements.txt","scikit-image","scikit-image>=0.19")\n",
+        "replaceAll('requirements.txt','pytorch_lightning','pytorch_lightning==1.7.7')\n",
+        "replaceAll('requirements.txt','scikit-image','scikit-image>=0.19')\n",
         "!pip install virtualenv && bash ./setup.sh\n",
         "!curl -Ls https://github.com/ekzhang/bore/releases/download/v0.4.0/bore-v0.4.0-x86_64-unknown-linux-musl.tar.gz | tar zx -C /usr/bin\n",
         "!curl -Lo /usr/bin/cloudflared https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 && chmod +x /usr/bin/cloudflared"
