--- a/NovelAISetup.ipynb
+++ b/NovelAISetup.ipynb
@@ -37,10 +37,10 @@
         "import sys\n",
 
         "def replaceAll(file,searchExp,replaceExp):\n",
-        "for line in fileinput.input(file, inplace=1):\n",
-        "if searchExp in line:\n",
-            "line = line.replace(searchExp,replaceExp)\n",
-        "sys.stdout.write(line)\n",
+        "\tfor line in fileinput.input(file, inplace=1):\n",
+        "\t\tif searchExp in line:\n",
+        "\t\t\tline = line.replace(searchExp,replaceExp)\n",
+        "\t\tsys.stdout.write(line)\n",
         "replaceAll('requirements.txt','pytorch_lightning','pytorch_lightning==1.7.7')\n",
         "replaceAll('requirements.txt','scikit-image','scikit-image>=0.19')\n",
         "!pip install virtualenv && bash ./setup.sh\n",
